# appraisal360

./: .gitignore  README.md  index.html  package-lock.json  package.json
backend/: .env.example  Makefile  README.md  pyproject.toml  requirements.txt
backend/scripts/: .env.example  README.md  seed_postgresql.py
backend/src/: cli.py  main.py
backend/src/api/: router.py
backend/src/api/routes/: admin.py  auth.py  feedback.py  health.py  profiles.py  reactions.py  review_cycles.py  upvotes.py
backend/src/api/schema/: admin.py  auth.py  feedback.py  feedback_question.py  health.py  profile.py  reaction.py  review_cycle.py  upvote.py
backend/src/client/: db.py  storage.py
backend/src/core/: security.py  settings.py
backend/src/middleware/: auth.py
backend/src/repository/: feedback_question_repository.py  feedback_repository.py  profile_repository.py  reaction_repository.py  review_cycle_repository.py  upvote_repository.py  user_repository.py
backend/src/repository/repo_utils/: bootstrap.py
backend/src/service/: admin_service.py  auth_service.py  feedback_question_service.py  feedback_service.py  profile_service.py  reaction_service.py  review_cycle_service.py  upvote_service.py
backend/src/service/mapper/: dto_mapper.py
database/: .env.example  Makefile  README.md  docker-compose.yml  pyproject.toml
database/postgresql/: .env.example  docker-compose.yml
database/rustfs/: .env.example  docker-compose.yml
database/scripts/: README.md  seed_postgresql.py
frontend/: .env.example  index.html  package-lock.json  package.json  tailwind.config.ts  (+2 more)
(+54 files in other folders)
